# csc494-code

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
data/: 2d_idk.blend  2d_torus.blend  A_guy_coarse_E.csv  A_guy_coarse_V.csv  A_guy_fine_E.csv  A_guy_fine_V.csv  make_disc.py  obj_to_csvs.py  octagon_hole_hand_E.csv  octagon_hole_hand_V.csv  square_hole_hand_E.csv  square_hole_hand_V.csv
include/: BAPN.h  closest_points.h  flow.h  get_decimated_sequence.h  grad_sdf.h  helpers.h  reinflate.h  types.h
src/: BAPN.cpp  closest_points.cpp  flow.cpp  get_decimated_sequence.cpp  helpers.cpp  reinflate.cpp
test/: test_with_discs.py
